Z-index fix for slider in footer

--- a/wp-content/themes/cae/assets/css/main.css
+++ b/wp-content/themes/cae/assets/css/main.css
@@ -3750,6 +3750,9 @@ nav.affix {
   height: 100%;
   width: 100%; }
 
+.bx-viewport {
+  z-index: 20; }
+
 .bx-controls-direction {
   top: 50%;
   position: relative;
