--- a/wp-content/themes/cae/assets/scss/partials/_footer-post-nav.scss
+++ b/wp-content/themes/cae/assets/scss/partials/_footer-post-nav.scss
@@ -96,6 +96,10 @@
 	width: 100%;
 }
 
+.bx-viewport {
+	z-index:20;
+}
+
 .bx-controls-direction {
 	top: 50%;
 	position: relative;
